--- a/src/main/resources/templates/commuting/commuting-write.html
+++ b/src/main/resources/templates/commuting/commuting-write.html
@@ -11,7 +11,7 @@
                         날짜 <span class="required">*</span>
                     </p>
                     <input type="text" name="requestDt" class="inputbox width100" readonly>
-                </div>
+                </div>지
                 <div class="mline mb10">
                     <p class="mtitle mb5">
                         등록할 기록 <span class="required">*</span>
@@ -20,6 +20,7 @@
                         <option value="">선택</option>
                         <option value="Y">출근시간</option>
                         <option value="N">퇴근시간</option>
+                        <option value="O">잔업</option>
                     </select>
                 </div>
                 <div class="mline mb10">
