신청승인상태 기능 update

--- a/src/main/resources/templates/commuting/commuting-write.html
+++ b/src/main/resources/templates/commuting/commuting-write.html
@@ -11,7 +11,7 @@
                         날짜 <span class="required">*</span>
                     </p>
                     <input type="text" name="requestDt" class="inputbox width100" readonly>
-                </div>지
+                </div>
                 <div class="mline mb10">
                     <p class="mtitle mb5">
                         등록할 기록 <span class="required">*</span>
