commute view update

--- a/src/main/resources/templates/commuting/commuting.html
+++ b/src/main/resources/templates/commuting/commuting.html
@@ -51,7 +51,7 @@
                                             <p id="request-content"></p>
                                         </div>
                                         <div class="state dchk">
-                                          <!--  <p id="request-status" th:text="${nearRequest.statusName}"></p> -->
+                                            <p id="request-status"></p>
                                         </div>
                                     </div>
                                 </div>
