--- a/src/main/resources/templates/commuting/commuting.html
+++ b/src/main/resources/templates/commuting/commuting.html
@@ -99,6 +99,7 @@
     <div th:replace="commuting/commuting-edit"></div>
     <div th:replace="commuting/commuting-write"></div>
         <div th:replace="commuting/commuting-apply"></div>
+        <div th:replace="commuting/commuting-modal"></div>
     <div th:replace="include/datepicker"></div>
     <div th:replace="include/fullcalendar"></div>
 </div>
