--- a/src/main/resources/templates/schedule/write-modal.html
+++ b/src/main/resources/templates/schedule/write-modal.html
@@ -36,7 +36,7 @@
 						</p>
 						<select name="approveId" class="selectbox width100">
 							<option value="" disabled selected hidden>선택</option>
-							<option th:each="a : ${approves}" th:value="${a.id}" th:text=${a.name}/>
+							<option th:each="a : ${approves}" th:value="${a.id}" th:text="${a.name}"/>
 						</select>
 					</div>
 				</div>
