--- a/src/main/resources/templates/admin-schedule/admin-schedule.html
+++ b/src/main/resources/templates/admin-schedule/admin-schedule.html
@@ -59,7 +59,8 @@
                     <div class="listbox width100">
                         <div class="lbtop mb10 clearfix">
                             <p id="totalSchedule" class="total"></p>
-                            <a role="button" id="vacation-days-btn" class="btn jjblue">휴가일수조회</a>
+                            <a role="button" id="vacation-days-btn" class="btn jjblue">휴가일수조회</a> &nbsp;&nbsp;
+                            <a role="button" id="holiday-api-btn" class="btn jjblue">공휴일 가져오기</a>
                         </div>
                         <div class="defaulttb main_table width100">
                             <table class="width100">
