yml ignore clear

--- a/src/main/resources/templates/notice/notice-edit.html
+++ b/src/main/resources/templates/notice/notice-edit.html
@@ -77,8 +77,8 @@
         </div>
     </div>
 
-    <div th:replace="include/fileupload"></div>
-	<script th:src="@{/common/smarteditor/js/HuskyEZCreator.js}"></script>
+  <!--  <div th:replace="include/fileupload"></div>
+	<script th:src="@{/common/smarteditor/js/HuskyEZCreator.js}"></script> -->
 	<script th:src="@{/common/js/notice/notice-common.js}"></script>
 	<script th:src="@{/common/js/notice/notice-edit.js}"></script>
 </body>
