--- a/src/main/resources/templates/notice/notice-write.html
+++ b/src/main/resources/templates/notice/notice-write.html
@@ -80,8 +80,8 @@
 			</div>
 		</div>
 	</div>
-	<div th:replace="include/fileupload"></div>
-	<script th:src="@{/common/smarteditor/js/HuskyEZCreator.js}"></script>
+<!--	<div th:replace="include/fileupload"></div>
+	<script th:src="@{/common/smarteditor/js/HuskyEZCreator.js}"></script>-->
 	<script th:src="@{/common/js/notice/notice-common.js}"></script>
 	<script th:src="@{/common/js/notice/notice-write.js}"></script>
 </body>
