--- a/src/main/resources/templates/admin-schedule/admin-schedule-detail-info.html
+++ b/src/main/resources/templates/admin-schedule/admin-schedule-detail-info.html
@@ -5,6 +5,7 @@
 			<h3>휴가신청 상세정보</h3>
 		</div>
 		<form id="view-form">
+			<input type="hidden" name="id">
 			<div class="modal_content">
 				<div class="mline mb10 clearfix">
 					<div class="mhalf_m floatleft mr10">
